--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
 {% endif %}
 
 <!doctype html>
-<html class="height-full">
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="description" content="{{ meta_description }}" />
@@ -34,4 +34,4 @@
       gtag('config', 'UA-549367-22');
     </script>
   </head>
-  <body class="bg-white height-full" {% if site.style == 'dark' %}style="background-color: #2f363d !important"{% endif %}>
+  <body class="bg-white" {% if site.style == 'dark' %}style="background-color: #2f363d !important"{% endif %}>
