--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,11 @@
   </div>
 {% else %}
   <div class="d-md-flex height-full">
-    <div class="flex-self-stretch {% if site.style == 'dark' %}bg-gray-dark{% else %}bg-white{% endif %} col-md-5 col-lg-4 col-xl-3 px-4 px-md-6 px-lg-7 py-6">
+    <div class="flex-self-stretch {% if site.style == 'dark' %}bg-gray-dark{% else %}bg-gray-light{% endif %} col-md-5 col-lg-4 col-xl-3 px-4 px-md-6 px-lg-7 py-6">
       {% include masthead.html metadata=true %}
     </div>
 
-    <div class="col-md-7 col-lg-8 col-xl-9 px-4 py-6 px-lg-7 bg-gray-light" {% if site.style == 'dark' %}style="background-color: #2f363d !important"{% endif %}>
+    <div class="col-md-7 col-lg-8 col-xl-9 px-4 py-6 px-lg-7 {% if site.style == 'light' %}bg-white{% endif %}" {% if site.style == 'dark' %}style="background-color: #2f363d !important"{% endif %}>
       <div class="mx-auto" style="max-width: 900px;">
         <div class="f4 {% if site.style == 'dark' %}text-white{% endif %} mb-6">
           <div class="f4 {% if site.style == 'dark' %}text-white{% endif %}">
